# Taxi-Trips-Data-Pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TASK.docx  airflow.yaml  compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: codeql.yaml  linters.yaml
config/: airflow.cfg
dags/: nyc_taxi_pipeline.py
data/: loader.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/marts/: mart_taxi_daily.sql
dbt/models/staging/: stg_nyc_taxi_trips.sql
docker-entrypoint-initdb.d/: create-superset-db.sql
superset/: superset_config.py
